--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
     "@types/react-select": "^5.0.0",
+    "axios": "^1.11.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
